Consistently position native and bitmap pastes at cursor center

BUG: 453247
(cherry picked from commit 420e7aeb05ed3faa0cc29db11a77b3aba17e5172)